--- a/backend/NewsSite/appsettings.Development.json
+++ b/backend/NewsSite/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "NewsSiteDbContext": "Host=localhost;Port=5432;Database=newsdb;Username=postgres;Password=mysecretpassword"
+  },
+  "Jwt": {
+    "Key": "your-super-secret-key-minimum-32-characters-long!",
+    "Issuer": "NewsSiteAPI",
+    "Audience": "NewsSiteFrontend"
   }
 }
